syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "LabelGenerationServices";

import "label-generation-model.proto";
import "sitewhere-common.proto";

// Label generation APIs.
service LabelGeneration {

	// Get label for customer type.
	rpc GetCustomerTypeLabel (GGetCustomerTypeLabelRequest) returns (GGetCustomerTypeLabelResponse) {}

	// Get label for customer.
	rpc GetCustomerLabel (GGetCustomerLabelRequest) returns (GGetCustomerLabelResponse) {}

	// Get label for area type.
	rpc GetAreaTypeLabel (GGetAreaTypeLabelRequest) returns (GGetAreaTypeLabelResponse) {}

	// Get label for area.
	rpc GetAreaLabel (GGetAreaLabelRequest) returns (GGetAreaLabelResponse) {}

	// Get label for device type.
	rpc GetDeviceTypeLabel (GGetDeviceTypeLabelRequest) returns (GGetDeviceTypeLabelResponse) {}

	// Get label for device.
	rpc GetDeviceLabel (GGetDeviceLabelRequest) returns (GGetDeviceLabelResponse) {}

	// Get label for device group.
	rpc GetDeviceGroupLabel (GGetDeviceGroupLabelRequest) returns (GGetDeviceGroupLabelResponse) {}

	// Get label for device assignment.
	rpc GetDeviceAssignmentLabel (GGetDeviceAssignmentLabelRequest) returns (GGetDeviceAssignmentLabelResponse) {}

	// Get label for asset type.
	rpc GetAssetTypeLabel (GGetAssetTypeLabelRequest) returns (GGetAssetTypeLabelResponse) {}

	// Get label for asset.
	rpc GetAssetLabel (GGetAssetLabelRequest) returns (GGetAssetLabelResponse) {}
}
		
// Request for creating label for customer type.
message GGetCustomerTypeLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID customerTypeId = 2;
}
	
// Response for creating label for customer type.
message GGetCustomerTypeLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for customer.
message GGetCustomerLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID customerId = 2;
}
	
// Response for creating label for customer.
message GGetCustomerLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for area type.
message GGetAreaTypeLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID areaTypeId = 2;
}
	
// Response for creating label for area type.
message GGetAreaTypeLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for area.
message GGetAreaLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID areaId = 2;
}
	
// Response for creating label for area.
message GGetAreaLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for device type.
message GGetDeviceTypeLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID deviceTypeId = 2;
}
	
// Response for creating label for device type.
message GGetDeviceTypeLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for device.
message GGetDeviceLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID deviceId = 2;
}
	
// Response for creating label for device.
message GGetDeviceLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for device group.
message GGetDeviceGroupLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID deviceGroupId = 2;
}
	
// Response for creating label for device group.
message GGetDeviceGroupLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for device assignment.
message GGetDeviceAssignmentLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID deviceAssignmentId = 2;
}
	
// Response for creating label for device assignment.
message GGetDeviceAssignmentLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for asset type.
message GGetAssetTypeLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID assetTypeId = 2;
}
	
// Response for creating label for asset type.
message GGetAssetTypeLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
	
// Request for creating label for asset.
message GGetAssetLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID assetId = 2;
}
	
// Response for creating label for asset type.
message GGetAssetLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
